# CoreTempMgr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
src/: ctm_config.cpp  ctm_config.hpp  ctm_manager.cpp  ctm_manager.hpp  ctm_sensors.cpp  ctm_sensors.hpp  main.cpp  r2d9.h  r2d9.hpp  r2d9_c_string.c  r2d9_c_string.h  r2d9_fixed_string_stream.hpp  r2d9_logger.cpp  r2d9_logger.hpp  r2d9_pair.hpp  r2d9_randomizer.cpp  r2d9_randomizer.hpp  r2d9_rapidjson.hpp  r2d9_semi_fixed_array.hpp  r2d9_time_utils.hpp  r2d9_trio.hpp
